# wasm-shrink

./: .gitignore  Cargo.toml  README.md  data.json  index.html  index.js
.github/workflows/: bench.yml  test.yml
data/: swift-hello.wasm.json
src/: lib.rs  main.rs
src/merge/: call_graph.rs  const_param.rs  estimate.rs  exact_match.rs  func_hash.rs  mod.rs  replace.rs
tests/: spectest.rs
tracker/: .gitattributes  Cargo.toml
tracker/ci/: bench.sh  restore-data.sh
tracker/fixture/: 0.wasm  0.wasm.opt  0.wasm.opt.wat  0.wat  1.wasm  1.wat  2.wasm  2.wat  3.wasm  3.wat  Makefile  simple.wasm  simple.wasm.opt  simple.wasm.opt.wat  simple.wat  swift-hello.wasm  swift-hello.wasm.opt  swift-hello.wasm.opt.wat
tracker/html/: index.html  index.js
tracker/src/: main.rs
wasm-extract/: Cargo.toml
wasm-extract/src/: main.rs
