[package]
name = "wasm-shrink"
version = "0.1.0"
edition = "2018"

[dependencies]
walrus = "0.19"
structopt = "0.3"
anyhow = "1.0"
log = "0.4"
env_logger = "0.8"
leb128 = "0.2"

[patch.crates-io]
# walrus = { git = "https://github.com/kateinoigakukun/walrus.git", branch = "wasm-shrink" }
walrus = { path = "../walrus" }

[dev-dependencies]
wasmtime-wast = "0.30"
wast = "37.0"
wasmtime = "0.30"

[workspace]
members = ["tracker", "wasm-extract"]
